# supertyper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  words.txt
src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: buffer.h  file_browser_state.h  file_parser.h  game_state.h  menu_state.h  quit_state.h  scoreboard_state.h  state.h  supertyper.h  word_shuffler.h
src/core/src/: buffer.cpp  file_browser_state.cpp  file_parser.cpp  game_state.cpp  menu_state.cpp  quit_state.cpp  scoreboard_state.cpp  state.cpp  supertyper.cpp  word_shuffler.cpp
words/: c++.st  finnish_100.st
